fixes z-index so the overlays appear behind the zoom

--- a/app/assets/stylesheets/map/overlays.css.scss
+++ b/app/assets/stylesheets/map/overlays.css.scss
@@ -268,7 +268,7 @@
 
   max-width: 800px;
 
-  z-index: 999;
+  z-index: 4;
 
   &:hover { 
     background:rgba(#333, .7);
